# DotClient

./: Dockerfile.windows  GITHUB_ACTIONS_GUIDE.md  README.md  WINDOWS_BUILD.md  build-windows.sh  generate-icons.py  generate_examples.py  package-lock.json  package.json  requirements.txt  template.html
.github/workflows/: build-alternative.yml  build.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: automation.rs  lib.rs  macro_replacer.rs  main.rs
src/components/: AutomationPage.tsx
src/components/common/: ToastProvider.tsx
src/components/modals/: DevicesModal.tsx  ExampleIconsModal.tsx  ExamplesModal.tsx  MacrosHelpModal.tsx  TemplatesModal.tsx  ToolsModal.tsx
src/components/tabs/: AutomationTab.tsx  ImageTab.tsx  TextTab.tsx  TextToImageTab.tsx
src/styles/: actions.css  base.css  buttons.css  device-selector.css  devices-modal.css  examples.css  forms.css  image-config.css  index.css  layout.css  modals.css  preview.css  tabs.css  templates.css  text-to-image.css  toasts.css
src/styles/automation/: base.css  dark.css  header.css  index.css  logs.css  modals.css  responsive.css  stats.css  tasks.css  toggle-actions.css
src/types/: index.ts
src/utils/: automationStorage.ts  fonts.ts  image.ts  names.ts
