[package]
name = "dotclient"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dotclient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.9"
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
imageproc = "0.25"
rusttype = "0.9"
sysinfo = { version = "0.30", default-features = true }
if-addrs = "0.10"
 

[target.'cfg(not(windows))'.dependencies]
headless_chrome = "0.9"
pnet_datalink = "0.33"

